* 2008-04-23 - francisco.laguna@open-xchange.com

 - Bugfix #11148:
    Check recurrence pattern for validity on update.
    Recalculate entire recurrence pattern on update (if any recurrence data was changed).

* 2008-04-23 - thorben.betten@open-xchange.com

 - Bugfix #11175: Proper checking for invalid folder name on folder
   creation/rename
 - Bugfix #11193: Proper display of vcard-only messages

* 2008-04-22 - thorben.betten@open-xchange.com

 - Bugfix #11139: The propagate method uses given connection if admin daemon.

* 2008-04-22 - sebastian.kauss@open-xchange.com

 - Bugfix #10825: [L3] Unclear object not found exceptions

* 2008-04-22 - thorben.betten@open-xchange.com

 - Bugfix #11169: Added support for strange cookie header which are not
   conform to RFC 2616

* 2008-04-21 - sebastian.kauss@open-xchange.com

 - Bugfix #10881: HTTP API incompatibility: 
                  appointment request missing field ignore

* 2008-04-21 - marcus.klein@open-xchange.com

 - Bugfix #11173: Initialize folder component if server is in admin mode.
 - Bugfix #11174: Expect an OXFolder to be already deleted.
 - Bugfix #11176: Do not inform a removed task from the deleted table.

* 2008-04-15 - francisco.laguna@open-xchange.com

 - Delete/Modify calendar data on user downgrade.
 - Delete/Modify infostore data on user downgrade.

* 2008-04-15 - thorben.betten@open-xchange.com

 - Bugfix #11142: Fixed NPE in cache bundle

* 2008-04-11 - thorben.betten@open-xchange.com

 - Bugfix #11138: Fixed mail folder creation

* 2008-04-09 - thorben.betten@open-xchange.com

 - Bugfix #11105: Fixed non-tree-visible folders query
 - Bugfix 9914: Additional check if upload form's file name is encoded

* 2008-04-07 - francisco.laguna@open-xchange.com
 - Catch NumberFormatExceptions in Attachment Servlet, when a request does not include a properly formatted number
   (Bug #11074)

* 2008-04-01 - francisco.laguna@open-xchange.com
 - Consistency Tool migrated to JMX (Bug #11067)